# validators/auth.js
@@ -1,7 +1,7 @@
 import Joi from 'joi';
 import { validateRequest } from './utils';
 
-const signupSchema = Joi.object().keys({
+const signUpSchema = Joi.object().keys({
   firstName: Joi.string()
     .trim()
     .required(0),
@@ -21,4 +21,16 @@ const signupSchema = Joi.object().keys({
     .options({ language: { any: { allowOnly: 'must match password' } } }),
 });
 
-export const signup = validateRequest(signupSchema);
+const signInSchema = Joi.object().keys({
+  email: Joi.string()
+    .trim()
+    .email()
+    .required(),
+  password: Joi.string()
+    .min(6)
+    .required(),
+});
+
+export const signUp = validateRequest(signUpSchema);
+
+export const signIn = validateRequest(signInSchema);
